2004-02-26  Damon Chaplin  <damon@gnome.org>

	* apps.html: added Greyhounds, Bygfoot and BooleanMinimizer.

2004-01-26  Damon Chaplin  <damon@gnome.org>

	* index.html: added link to new Win32 port.
	removed Korea link since it isn't there any more.

2004-01-14  Damon Chaplin  <damon@gnome.org>

	* todo.html: merged in Paolo's stuff about Glade 3.

	* apps.html: added gbarco.

2003-12-04  Damon Chaplin  <damon@gnome.org>

	* apps.html: added Sonic Rainbow.

2003-11-26  Damon Chaplin  <damon@gnome.org>

	* download.html: set stable release to 2.0.1.

	* history.html: added 2.0.1 info.

2003-11-18  Damon Chaplin  <damon@gnome.org>

	* apps.html: added boardgametool and polyxmass.

2003-11-09  Damon Chaplin  <damon@gnome.org>

	* download.html: 
	* index.html: add stuff for 2.0.1 release.

	* apps.html: added configure-thinkpad.

	* lists.html: add link to glademm mailing list.

2003-10-22  Damon Chaplin  <damon@gnome.org>

	* FAQ: synced with version in Glade.

2003-07-18  Damon Chaplin  <damon@gnome.org>

	* apps.html: added Sussen.

	* index.html: added line to new tutorial.

2003-05-30  Damon Chaplin  <damon@gnome.org>

	* index.html: added link to new Spanish guide to Glade.

2003-05-12  Damon Chaplin  <damon@gnome.org>

	* index.html: updated links to Olivier Karquel's French docs.
	added link to new tutorial.

2003-04-28  Damon Chaplin  <damon@gnome.org>

	* index.html: added pointer to Dutch translation of manual.

	* apps.html: moved TiLP to Glade 2 section and mentioned it uses
	libglade. Added gequel.

2003-04-20  Damon Chaplin  <damon@gnome.org>

	* index.html: 
	* history.html: 
	* download.html: updated for 2.0.0 release.

2003-03-19  Damon Chaplin  <damon@gnome.org>

	* apps.html: added a bunch of apps.

2003-02-08  Damon Chaplin  <damon@gnome.org>

	* index.html: 
	* apps.html: changed my email address to damon@gnome.org.

2002-12-02  Damon Chaplin  <damon@gnome.org>

	* glade-2.0.dtd: added to web site, so links from Glade XML files