@@ -175,6 +175,11 @@ a football manager game.
 minimizes boolean functions; written in C++; runs on Linux, Solaris, Win32.
 </ul>
 
+<ul>
+<li><a href="http://www.mckae.com/dtraq.html">DTraq</a> -
+an Ada 95 data logging and interactive review and playback tool.
+</ul>
+
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
 <ul>
