@@ -317,7 +317,7 @@ Aug&nbsp;28&nbsp;2002
 <p>
 Olivier Karquel spotted <a href="http://gug.tuxfamily.org">a new
 website for French Glade users</a>. He also says that he's updated his
-<a href="http://yellowspoon.tuxfamily.org/linux/">Glade Reference Manual (in French)
+<a href="http://www.pinguinautes.org/rubrique.php3?id_rubrique=4">Glade Reference Manual (in French)
 </a>.
 </P>
 
@@ -416,7 +416,7 @@ Nov&nbsp;7&nbsp;2001
 <B>Updated French Documentation</B>
 <P>
 Olivier Karquel has posted
-<a href="http://yellowspoon.tuxfamily.org/linux/">updated French Glade and libglade documentation</a>.
+<a href="http://www.pinguinautes.org/rubrique.php3?id_rubrique=4">updated French Glade and libglade documentation</a>.
 (Click on the 'Glade' button at the bottom of the page.)
 </font></td></tr>
 
@@ -448,7 +448,7 @@ Jun&nbsp;21&nbsp;2001
 <B>Updated French Translation of Glade FAQ</B>
 <P>
 Olivier Karquel has posted an updated
-<a href="http://yellowspoon.tuxfamily.org/linux/">French translation of the Glade FAQ</a>.
+<a href="http://www.pinguinautes.org/rubrique.php3?id_rubrique=4">French translation of the Glade FAQ</a>.
 (Click on the 'Glade' button at the bottom of the page.)
 </font></td></tr>
 
