@@ -1,3 +1,9 @@
+2004-03-04  Damon Chaplin  <damon@gnome.org>
+
+	* apps.html: added DTraq.
+
+	* index.html: updated Olivier Karquel's URL of the French info.
+
 2004-02-26  Damon Chaplin  <damon@gnome.org>
 
 	* apps.html: added Greyhounds, Bygfoot and BooleanMinimizer.
